<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/background_light">

    <ImageView
        android:id="@+id/main_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="24sp"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_start_game"
        android:background="@drawable/ui_button_primary"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_about"
        android:background="@drawable/ui_button_primary"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/btn_privacy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_privacy"
        android:background="@drawable/ui_button_primary"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>