<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background_light">

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_score"
        android:textSize="20sp"
        android:textColor="@color/text_primary"
        android:gravity="center"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tv_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_target"
        android:textSize="18sp"
        android:textColor="@color/color_primary"
        android:gravity="center"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_bear_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="🐻"
            android:textSize="32sp"
            android:background="@drawable/ui_button_primary"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btn_bear_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="🐻"
            android:textSize="32sp"
            android:background="@drawable/ui_button_primary"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_bear_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="🐻"
            android:textSize="32sp"
            android:background="@drawable/ui_button_primary"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btn_bear_4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="��"
            android:textSize="32sp"
            android:background="@drawable/ui_button_primary"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_bear_5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="🐻"
            android:textSize="32sp"
            android:background="@drawable/ui_button_primary"
            android:layout_margin="5dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/color_success"
        android:gravity="center"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/btn_reset"
            android:background="@drawable/ui_button_primary"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/btn_back"
            android:background="@drawable/ui_button_primary"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_margin="5dp" />

    </LinearLayout>

</LinearLayout>